--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,21 @@
 }
 
 .aboutUs {
-  background-color: #5b5bcf;
+  background-color: #5151a3 !important;
+}
+
+.brands {
+  background-color: #e8eaec !important;
+}
+
+.brands img:hover {
+  width: 50%;
+  cursor: pointer;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
+.services {
+  background-color: #101038;
 }
 /*# sourceMappingURL=style.css.map */
